--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -42,10 +42,39 @@ $menu = rofi-wayland --show drun
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
+# 1. Status Bar
+exec-once = waybar
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-exec-once = waybar & hyprpaper
+# 2. Notification Daemon
+exec-once = mako
+
+# 3. Wallpaper
+exec-once = hyprpaper
+
+# 4. Authentication Agent (for GUI sudo prompts)
+# Note: Path may vary slightly, but this is the default for polkit-kde-agent
+# exec-once = /usr/lib/polkit-kde-authentication-agent-1
+
+# 5. Network Manager Applet (for Wi-Fi, VPN system tray)
+exec-once = nm-applet --indicator
+
+# 6. Idle & Locking (swayidle)
+# This is a sample config. It:
+# - Locks after 300 seconds (5 min) of inactivity
+# - Turns the screen off after 600 seconds (10 min)
+# - Turns the screen back on when activity resumes
+# - Locks the screen immediately when you close a laptop lid
+exec-once = swayidle -w \
+            timeout 300 'swaylock -f' \
+            timeout 600 'hyprctl dispatch dpms off' \
+            resume 'hyprctl dispatch dpms on' \
+            before-sleep 'swaylock -f' \
+            lock 'swaylock -f'
+
+# 7. Portals (for Flatpak, screen sharing)
+# This ensures that XDG portals know we are on Hyprland.
+# Your xdg-desktop-portal-hyprland (installed) will be used.
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=hyprland
 
 
 #############################
