--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -86,6 +86,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+env = QT_QPA_PLATFORMTHEME,qt5ct
 
 ###################
 ### PERMISSIONS ###
