hyprpaper path fix

--- a/dot_config/hypr/hyprpaper.conf
+++ b/dot_config/hypr/hyprpaper.conf
@@ -1,8 +1,8 @@
 # Preload the wallpaper image
-preload = /home/{{ ansible_user }}/Pictures/wallpapers/gruvbox_spac.jpg
+preload = ~/Pictures/wallpapers/gruvbox_spac.jpg
 
 # Set the wallpaper for all monitors (the comma means 'all')
-wallpaper = ,/home/{{ ansible_user }}/Pictures/wallpapers/gruvbox_spac.jpg
+wallpaper = ,~/Pictures/wallpapers/gruvbox_spac.jpg
 
 # Optional: Disable IPC for a tiny performance boost
 ipc = off
