--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -76,6 +76,9 @@ exec-once = swayidle -w \
 # Your xdg-desktop-portal-hyprland (installed) will be used.
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=hyprland
 
+# 8. Pywal - Load cached colors at startup
+exec = ~/.local/bin/wal-reload.sh
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -113,17 +116,17 @@ env = QT_QPA_PLATFORMTHEME,qt5ct
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 4
+    gaps_out = 12
 
     border_size = 2
 
-    # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    # Stealth Cyberpunk: Dark slate gradient borders
+    col.active_border = rgba(2e3440cc) rgba(3b4252cc) rgba(4c566aaa) 45deg
+    col.inactive_border = rgba(1e222aaa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
 
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -133,27 +136,36 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 12
     rounding_power = 2
 
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    # Stealth Cyberpunk: 80-85% transparency
+    active_opacity = 0.85
+    inactive_opacity = 0.80
+    fullscreen_opacity = 1.0
 
     shadow {
         enabled = true
-        range = 4
+        range = 20
         render_power = 3
-        color = rgba(1a1a1aee)
+        color = rgba(0a0a0fcc)
+        offset = 0 5
     }
 
-    # https://wiki.hypr.land/Configuring/Variables/#blur
+    # Heavy Kasten blur effect for glass aesthetic
     blur {
         enabled = true
-        size = 3
-        passes = 1
-
-        vibrancy = 0.1696
+        size = 12
+        passes = 4
+        brightness = 0.8
+        contrast = 0.9
+        noise = 0.02
+        vibrancy = 0.15
+        vibrancy_darkness = 0.2
+        popups = true
+        special = true
+        new_optimizations = true
+        xray = false
     }
 }
 
@@ -338,3 +350,39 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+
+#######################
+### LAYER RULES ###
+#######################
+
+# Waybar blur and transparency
+layerrule = blur, waybar
+layerrule = ignorezero, waybar
+layerrule = ignorealpha 0.3, waybar
+
+# Rofi blur and transparency
+layerrule = blur, rofi
+layerrule = ignorezero, rofi
+layerrule = ignorealpha 0.2, rofi
+
+# Mako notification blur
+layerrule = blur, mako
+layerrule = ignorezero, mako
+
+
+#################################
+### WINDOW RULES (THEME) ###
+#################################
+
+# Keep media apps fully opaque for best viewing
+windowrule = opacity 1.0 override, class:^(firefox)$
+windowrule = opacity 1.0 override, class:^(mpv)$
+windowrule = opacity 1.0 override, class:^(imv)$
+windowrule = opacity 1.0 override, title:^(Picture-in-Picture)$
+
+# File manager slightly more opaque for readability
+windowrule = opacity 0.92 override 0.88 override, class:^(thunar)$
+
+# Floating windows with special treatment
+windowrule = opacity 0.90 override, floating:1
