--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -2,13 +2,41 @@
 # All options are in the foot.ini(5) man page
 
 # --- Core Settings ---
-# shell = /bin/zsh  # (Optional) Foot will use your user's default shell.
-term = foot-256color   # Sets the $TERM environment variable
+term = foot-256color
 login-shell = yes
 
 # --- Font ---
-# 'Noto Sans Mono' comes from your 'noto-fonts' package.
-font = Noto Sans Mono:size=11
-# font-bold = auto
-# font-italic = auto
-# font-bold-italic = auto
+font = JetBrains Mono:size=11
+font-bold = JetBrains Mono:weight=bold:size=11
+line-height = 1.2
+
+# --- Appearance ---
+pad = 12x12
+
+# Include pywal-generated colors (or fallback to colors.ini)
+include = ~/.config/foot/colors.ini
+
+# --- Cursor ---
+[cursor]
+style = beam
+blink = yes
+beam-thickness = 2
+
+# --- Mouse ---
+[mouse]
+hide-when-typing = yes
+
+# --- Scrollback ---
+[scrollback]
+lines = 10000
+multiplier = 3.0
+
+# --- Key Bindings ---
+[key-bindings]
+scrollback-up-page = Page_Up
+scrollback-down-page = Page_Down
+clipboard-copy = Control+Shift+c
+clipboard-paste = Control+Shift+v
+font-increase = Control+plus
+font-decrease = Control+minus
+font-reset = Control+0
