--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = foot
 $fileManager = thunar
-$menu = rofi-wayland --show drun
+$menu = rofi -show drun
 
 
 #################
@@ -58,18 +58,11 @@ exec-once = hyprpaper
 # 5. Network Manager Applet (for Wi-Fi, VPN system tray)
 exec-once = nm-applet --indicator
 
-# 6. Idle & Locking (swayidle)
-# This is a sample config. It:
+# 6. Idle & Locking (hypridle + hyprlock)
 # - Locks after 300 seconds (5 min) of inactivity
 # - Turns the screen off after 600 seconds (10 min)
-# - Turns the screen back on when activity resumes
-# - Locks the screen immediately when you close a laptop lid
-exec-once = swayidle -w \
-            timeout 300 'swaylock -f' \
-            timeout 600 'hyprctl dispatch dpms off' \
-            resume 'hyprctl dispatch dpms on' \
-            before-sleep 'swaylock -f' \
-            lock 'swaylock -f'
+# Uses Hyprland-native hypridle instead of swayidle
+exec-once = hypridle
 
 # 7. Portals (for Flatpak, screen sharing)
 # This ensures that XDG portals know we are on Hyprland.
@@ -88,8 +81,10 @@ exec = ~/.local/bin/wal-reload.sh
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,Bibata-Modern-Classic
 
 env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_QPA_PLATFORM,wayland;xcb
 
 ###################
 ### PERMISSIONS ###
@@ -272,12 +267,15 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+# Lock screen and logout
+bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, X, exec, wlogout -b 4
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
