theme switch button

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -15,6 +15,7 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
+source = ~/.config/hypr/colors.conf
 
 ################
 ### MONITORS ###
@@ -116,8 +117,9 @@ general {
 
     border_size = 2
 
-    # Stealth Cyberpunk: Dark slate gradient borders
-    col.active_border = rgba(2e3440cc) rgba(3b4252cc) rgba(4c566aaa) 45deg
+    # Dynamic borders (defaults to Stealth Cyberpunk if not generated)
+    # Uses variables from ~/.config/hypr/colors.conf
+    col.active_border = $wal_color4_alpha $wal_color2_alpha $wal_color8_alpha 45deg
     col.inactive_border = rgba(1e222aaa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
