--- a/dot_config/wal/templates/colors-hyprland.conf
+++ b/dot_config/wal/templates/colors-hyprland.conf
@@ -1,10 +1,39 @@
 # Pywal generated colors for Hyprland borders
-# Source this from main hyprland.conf if desired
+# Source this from main hyprland.conf
 
 $wal_bg = rgb({background.strip})
 $wal_fg = rgb({foreground.strip})
 $wal_color0 = rgb({color0.strip})
 $wal_color1 = rgb({color1.strip})
 $wal_color2 = rgb({color2.strip})
+$wal_color3 = rgb({color3.strip})
 $wal_color4 = rgb({color4.strip})
+$wal_color5 = rgb({color5.strip})
+$wal_color6 = rgb({color6.strip})
+$wal_color7 = rgb({color7.strip})
 $wal_color8 = rgb({color8.strip})
+$wal_color9 = rgb({color9.strip})
+$wal_color10 = rgb({color10.strip})
+$wal_color11 = rgb({color11.strip})
+$wal_color12 = rgb({color12.strip})
+$wal_color13 = rgb({color13.strip})
+$wal_color14 = rgb({color14.strip})
+$wal_color15 = rgb({color15.strip})
+
+# Alpha-blended versions for borders (80% opacity = cc)
+$wal_color0_alpha = rgba({color0.strip}cc)
+$wal_color1_alpha = rgba({color1.strip}cc)
+$wal_color2_alpha = rgba({color2.strip}cc)
+$wal_color3_alpha = rgba({color3.strip}cc)
+$wal_color4_alpha = rgba({color4.strip}cc)
+$wal_color5_alpha = rgba({color5.strip}cc)
+$wal_color6_alpha = rgba({color6.strip}cc)
+$wal_color7_alpha = rgba({color7.strip}cc)
+$wal_color8_alpha = rgba({color8.strip}cc)
+$wal_color9_alpha = rgba({color9.strip}cc)
+$wal_color10_alpha = rgba({color10.strip}cc)
+$wal_color11_alpha = rgba({color11.strip}cc)
+$wal_color12_alpha = rgba({color12.strip}cc)
+$wal_color13_alpha = rgba({color13.strip}cc)
+$wal_color14_alpha = rgba({color14.strip}cc)
+$wal_color15_alpha = rgba({color15.strip}cc)
