--- a/dot_config/hypr/hyprpaper.conf
+++ b/dot_config/hypr/hyprpaper.conf
@@ -4,8 +4,8 @@
 #
 # To change wallpaper, either:
 #   1. Rename your preferred wallpaper to start with X_ (e.g., X_cyberpunk.jpg)
-#   2. Run: theme /path/to/wallpaper.jpg
+#   2. Run: wal-set.sh /path/to/wallpaper.jpg
 #
 # Placeholder (will be overwritten on login):
-preload = ~/Pictures/wallpapers/X_default.jpg
-wallpaper = ,~/Pictures/wallpapers/X_default.jpg
+preload = ~/Pictures/wallpapers/X_red_minimalist.png
+wallpaper = ,~/Pictures/wallpapers/X_red_minimalist.png
