fix dotfiles config

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -249,7 +249,10 @@ input {
 }
 
 # See https://wiki.hypr.land/Configuring/Gestures
-gesture = 3, horizontal, workspace
+gestures {
+    workspace_swipe = true
+    workspace_swipe_fingers = 3
+}
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
@@ -266,12 +269,20 @@ device {
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
+# macOS-like shortcuts (using SUPER as Cmd equivalent)
+bind = $mainMod, Space, exec, $menu          # Spotlight-like app launcher
+bind = $mainMod, W, killactive,              # Close window (Cmd+W)
+bind = $mainMod, Q, killactive,              # Close window/quit app (Cmd+Q)
+
+# Alternative CTRL-based shortcuts (if you prefer Ctrl over Super)
+bind = CTRL, Space, exec, $menu              # Ctrl+Space for launcher
+bind = CTRL, W, killactive,                  # Ctrl+W close window
+bind = CTRL, Q, killactive,                  # Ctrl+Q close window
+
+# Other binds
+bind = $mainMod, Return, exec, $terminal     # Open terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -346,10 +357,10 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrulev2 = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
 
 
 #######################
@@ -357,18 +368,18 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 #######################
 
 # Waybar blur and transparency
-layerrule = blur, waybar
-layerrule = ignorezero, waybar
-layerrule = ignorealpha 0.3, waybar
+layerrule = blur, ^(waybar)$
+layerrule = ignorezero, ^(waybar)$
+layerrule = ignorealpha 0.3, ^(waybar)$
 
 # Rofi blur and transparency
-layerrule = blur, rofi
-layerrule = ignorezero, rofi
-layerrule = ignorealpha 0.2, rofi
+layerrule = blur, ^(rofi)$
+layerrule = ignorezero, ^(rofi)$
+layerrule = ignorealpha 0.2, ^(rofi)$
 
 # Mako notification blur
-layerrule = blur, mako
-layerrule = ignorezero, mako
+layerrule = blur, ^(mako)$
+layerrule = ignorezero, ^(mako)$
 
 
 #################################
@@ -376,13 +387,13 @@ layerrule = ignorezero, mako
 #################################
 
 # Keep media apps fully opaque for best viewing
-windowrule = opacity 1.0 override, class:^(firefox)$
-windowrule = opacity 1.0 override, class:^(mpv)$
-windowrule = opacity 1.0 override, class:^(imv)$
-windowrule = opacity 1.0 override, title:^(Picture-in-Picture)$
+windowrulev2 = opacity 1.0 override, class:^(firefox)$
+windowrulev2 = opacity 1.0 override, class:^(mpv)$
+windowrulev2 = opacity 1.0 override, class:^(imv)$
+windowrulev2 = opacity 1.0 override, title:^(Picture-in-Picture)$
 
 # File manager slightly more opaque for readability
-windowrule = opacity 0.92 override 0.88 override, class:^(thunar)$
+windowrulev2 = opacity 0.92 override 0.88 override, class:^(thunar)$
 
 # Floating windows with special treatment
-windowrule = opacity 0.90 override, floating:1
+windowrulev2 = opacity 0.90 override, floating:1
