fix dotfiles config

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -168,7 +168,7 @@ decoration {
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = true
 
     # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
     #        NAME,           X0,   Y0,   X1,   Y1
@@ -234,10 +234,6 @@ misc {
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
     kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
 
     follow_mouse = 1
 
@@ -249,10 +245,8 @@ input {
 }
 
 # See https://wiki.hypr.land/Configuring/Gestures
-gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
-}
+# Hyprland 0.51+ uses new gesture syntax
+gesture = 3, horizontal, workspace
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
@@ -273,11 +267,6 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, Space, exec, $menu          # Spotlight-like app launcher
 bind = $mainMod, W, killactive,              # Close window (Cmd+W)
 bind = $mainMod, Q, killactive,              # Close window/quit app (Cmd+Q)
-
-# Alternative CTRL-based shortcuts (if you prefer Ctrl over Super)
-bind = CTRL, Space, exec, $menu              # Ctrl+Space for launcher
-bind = CTRL, W, killactive,                  # Ctrl+W close window
-bind = CTRL, Q, killactive,                  # Ctrl+Q close window
 
 # Other binds
 bind = $mainMod, Return, exec, $terminal     # Open terminal
@@ -368,18 +357,17 @@ windowrulev2 = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0
 #######################
 
 # Waybar blur and transparency
-layerrule = blur, ^(waybar)$
-layerrule = ignorezero, ^(waybar)$
-layerrule = ignorealpha 0.3, ^(waybar)$
+layerrule = blur, waybar
+layerrule = blur_popups, waybar
+layerrule = ignore_alpha 0.3, waybar
 
 # Rofi blur and transparency
-layerrule = blur, ^(rofi)$
-layerrule = ignorezero, ^(rofi)$
-layerrule = ignorealpha 0.2, ^(rofi)$
+layerrule = blur, rofi
+layerrule = ignore_alpha 0.2, rofi
 
 # Mako notification blur
-layerrule = blur, ^(mako)$
-layerrule = ignorezero, ^(mako)$
+layerrule = blur, mako
+layerrule = ignore_alpha 0.5, mako
 
 
 #################################
