--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -342,14 +342,11 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
+# Ignore maximize requests from apps
+windowrule = suppress_event maximize, match:class .*
 
 # Fix some dragging issues with XWayland
-windowrulev2 = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
+windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, match:floating 1, match:fullscreen 0, match:pinned 0
 
 
 #######################
@@ -357,17 +354,17 @@ windowrulev2 = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0
 #######################
 
 # Waybar blur and transparency
-layerrule = blur, waybar
-layerrule = blur_popups, waybar
-layerrule = ignore_alpha 0.3, waybar
+layerrule = blur, match:namespace waybar
+layerrule = blur_popups, match:namespace waybar
+layerrule = ignore_alpha 0.3, match:namespace waybar
 
 # Rofi blur and transparency
-layerrule = blur, rofi
-layerrule = ignore_alpha 0.2, rofi
+layerrule = blur, match:namespace rofi
+layerrule = ignore_alpha 0.2, match:namespace rofi
 
 # Mako notification blur
-layerrule = blur, mako
-layerrule = ignore_alpha 0.5, mako
+layerrule = blur, match:namespace mako
+layerrule = ignore_alpha 0.5, match:namespace mako
 
 
 #################################
@@ -375,13 +372,13 @@ layerrule = ignore_alpha 0.5, mako
 #################################
 
 # Keep media apps fully opaque for best viewing
-windowrulev2 = opacity 1.0 override, class:^(firefox)$
-windowrulev2 = opacity 1.0 override, class:^(mpv)$
-windowrulev2 = opacity 1.0 override, class:^(imv)$
-windowrulev2 = opacity 1.0 override, title:^(Picture-in-Picture)$
+windowrule = opacity 1.0 override, match:class ^(firefox)$
+windowrule = opacity 1.0 override, match:class ^(mpv)$
+windowrule = opacity 1.0 override, match:class ^(imv)$
+windowrule = opacity 1.0 override, match:title ^(Picture-in-Picture)$
 
 # File manager slightly more opaque for readability
-windowrulev2 = opacity 0.92 override 0.88 override, class:^(thunar)$
+windowrule = opacity 0.92 override 0.88 override, match:class ^(thunar)$
 
 # Floating windows with special treatment
-windowrulev2 = opacity 0.90 override, floating:1
+windowrule = opacity 0.90 override, match:floating 1
