--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -346,7 +346,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 windowrule = suppress_event maximize, match:class .*
 
 # Fix some dragging issues with XWayland
-windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, match:floating 1, match:fullscreen 0, match:pinned 0
+windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland true, match:floating true, match:fullscreen false, match:pinned false
 
 
 #######################
@@ -354,17 +354,17 @@ windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, matc
 #######################
 
 # Waybar blur and transparency
-layerrule = blur, match:namespace waybar
-layerrule = blur_popups, match:namespace waybar
-layerrule = ignore_alpha 0.3, match:namespace waybar
+layerrule = blur, waybar
+layerrule = blurpopups, waybar
+layerrule = ignorealpha 0.3, waybar
 
 # Rofi blur and transparency
-layerrule = blur, match:namespace rofi
-layerrule = ignore_alpha 0.2, match:namespace rofi
+layerrule = blur, rofi
+layerrule = ignorealpha 0.2, rofi
 
 # Mako notification blur
-layerrule = blur, match:namespace mako
-layerrule = ignore_alpha 0.5, match:namespace mako
+layerrule = blur, mako
+layerrule = ignorealpha 0.5, mako
 
 
 #################################
@@ -381,4 +381,4 @@ windowrule = opacity 1.0 override, match:title ^(Picture-in-Picture)$
 windowrule = opacity 0.92 override 0.88 override, match:class ^(thunar)$
 
 # Floating windows with special treatment
-windowrule = opacity 0.90 override, match:floating 1
+windowrule = opacity 0.90 override, match:floating true
